--- a/ihsg_analysis.ipynb
+++ b/ihsg_analysis.ipynb
@@ -159,6 +159,16 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "e3cffb81-4b56-4695-9601-b25e410b2893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"data_saved/jkse.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "062df482-167d-4480-82f1-56759419a975",
    "metadata": {},
    "outputs": [],
